add hotels component, styled home page, added data to db

--- a/Yelpper-Frontend/src/css/Navbar.css
+++ b/Yelpper-Frontend/src/css/Navbar.css
@@ -1,4 +1,12 @@
-#searchform {
-display: inline-block;
-border: ipx black solid;
+.searchform {
+    display: inline;
+}
+
+.navbar {
+    padding-left: 10px;
+   
+}
+
+.navbar>form {
+    margin-left: 50%;
 }
